# tensor

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  README.rst  codecov.yml  requirements-to-freeze.txt
.github/workflows/: build.yml  build_blas.yml  cmake.yml  python.yml
CMake/: python.cmake
benchmark/: CMakeLists.txt
benchmark/src/: main.cpp
cpp/: CMakeLists.txt
cpp/include/tensor/: ts.hpp
cpp/include/tensor/nn/: cross_entropy_loss.hpp  feed_forward.hpp  softmax.hpp
cpp/src/tensor/: data_holder.cpp  data_holder.hpp  iterator.hpp  ops.hpp  ops_common.cpp  ops_common.hpp  ops_dot.hpp  ops_dot_blas.cpp  ops_dot_blas.hpp  ops_dot_naive.cpp  ops_dot_naive.hpp  statistics.hpp  tensor.cpp  tensor.hpp  tensor_forward.hpp  ts.hpp
cpp/src/tensor/nn/: activations.cpp  activations.hpp  conv2d.cpp  conv2d.hpp  conv2d_im2col.cpp  conv2d_im2col.hpp  conv2d_naive.cpp  conv2d_naive.hpp  conv_2d.cpp  conv_2d.hpp  conv_2d_helpers.cpp  conv_2d_helpers.hpp  cross_entropy_loss.cpp  cross_entropy_loss.hpp  dataset_iterator.cpp  dataset_iterator.hpp  feed_forward.cpp  feed_forward.hpp  functional.cpp  functional.hpp  functional_helpers.cpp  functional_helpers.hpp  grad_holder.cpp  grad_holder.hpp  im2col.cpp  im2col.hpp  image_utils.cpp  image_utils.hpp  initialization.hpp  layer_base.hpp  max_pool_2d.cpp  max_pool_2d.hpp  optimizers.cpp  optimizers.hpp  parameters_registry.cpp  parameters_registry.hpp  planar_dataset.cpp  planar_dataset.hpp  regularization.hpp  saver.cpp  (+5 more)
cpp/src/tensor/nn/autograd/: relu.hpp  sigmoid.cpp  sigmoid.hpp  tanh.cpp  tanh.hpp
cpp/src/tensor/nn/data/: dataset_iterator.cpp  dataset_iterator.hpp  planar_dataset.cpp  planar_dataset.hpp
cpp/src/tensor/nn/layer/: batch_normalization.cpp  batch_normalization.hpp  conv2d_im2col.cpp  conv2d_naive.cpp  conv_2d.hpp  conv_2d_im2col.cpp  conv_2d_im2col.hpp  conv_2d_naive.cpp  conv_2d_naive.hpp  dropout.cpp  dropout.hpp  feed_forward.cpp  feed_forward.hpp  layer_base.cpp  layer_base.hpp  lstm.cpp  lstm.hpp  lstm_cell.cpp  lstm_cell.hpp  max_pool_2d.cpp  max_pool_2d.hpp  rnn.cpp  rnn.hpp  rnn_cell.cpp  rnn_cell.hpp
cpp/src/tensor/nn/optimizer/: adagrad.cpp  adagrad.hpp  adam.cpp  adam.hpp  optimizer.hpp  rmsprop.cpp  rmsprop.hpp  sgd.cpp  sgd.hpp
cpp/src/tensor/nn/proto/: array.proto
cpp/src/wrapper/: py_data_holder.hpp  py_grad_holder.hpp  tensor.cpp
cpp/tests/tensor/: test_ops_common.cpp  test_ops_dot.cpp  test_tensor.cpp
cpp/tests/tensor/nn/: test_activation.cpp  test_conv2d.cpp  test_conv_2d.cpp  test_conv_2d_helpers.cpp  test_cross_entropy_loss.cpp  test_feed_forward.cpp  test_functional.cpp  test_functional_helpers.cpp  test_im2col.cpp  test_image_utils.cpp  test_max_pool_2d.cpp  test_optimizers.cpp  test_planar_dataset.cpp  test_saver.cpp  test_softmax.cpp  test_variable.cpp
cpp/tests/tensor/nn/data/: test_planar_dataset.cpp
cpp/tests/tensor/nn/layer/: test_batch_normalization.cpp  test_conv_2d.cpp  test_dropout.cpp  test_feed_forward.cpp
cpp/tests/tensor/nn/optimizer/: test_adagrad.cpp  test_adam.cpp  test_rmsprop.cpp  test_sgd.cpp
docs/: Doxyfile  conf.py  index.rst  requirements.txt  usage.rst
examples/: CMakeLists.txt
examples/char-rnn/: CMakeLists.txt  README.md
examples/char-rnn/resources/: clean_text.py  pan-tadeusz.txt
examples/char-rnn/src/: main.cpp  train_lstm.cpp  train_rnn.cpp  vocabulary.hpp
examples/nn-planar-data/: CMakeLists.txt  README.md  visualize_nn_planar_data.py
examples/nn-planar-data/resources/: data.tsv  test_planar_data.tsv  train_planar_data.tsv
examples/nn-planar-data/src/: main.cpp
include/tensor/: dimensions.hpp  ops.hpp  tensor.hpp  tensor_forward.hpp  ts.hpp
include/tensor/nn/: dataset_iterator.hpp  nn.hpp  planar_dataset.hpp
include_swig/tensor/: tensor.hpp
pytensor/tests/: test_pytensor.py
python/: CMakeLists.txt  setup.cfg  setup.py
python/examples/autograd/: autograd_example.py  dataset.py  main.py  main_gui.py  visualization.py
python/examples/fft/: main.py
python/examples/mnist/: dataset.py  example.py  main.py  requirements.txt
python/src/: tensor.cpp  tensor.py
python/src/autograd/: scalar_grad.py  tensor_grad.py
python/src/fft/: fft.py
python/src/tensor/: __init__.py  libtensor.pyi  nn.py  tensor.py  viz.py
python/src/tensor/autograd/: __init__.py  autograd.py  scalar_grad.py  tensor_grad.py  viz.py
python/src/tensor/fft/: __init__.py  fft.py
python/tests/: test_nn.py  test_tensor.py  test_viz.py  test_wrapper.py
python/tests/autograd/: test_viz.py
scripts/: build.sh  update.sh
src/: dimensions.hpp  exceptions.hpp  flatarray.hpp  matrix.cpp  matrix.hpp  matrixiterator.cpp  matrixiterator.hpp  matrixview.cpp  matrixview.hpp  tensor1d.hpp
src/flatarray/: dimensions.hpp  flatarray.hpp  iterator.hpp  ops.hpp  ops_blas.hpp  ops_naive.hpp
src/nn/: feedforward.cpp  feedforward.hpp
src/tensor/: dimensions.hpp  exceptions.hpp  iterator.hpp  ops.hpp  ops_blas.cpp  ops_blas.hpp  ops_common.cpp  ops_common.hpp  ops_dot.cpp  ops_dot.hpp  ops_naive.cpp  ops_naive.hpp  tensor.cpp  tensor.hpp  tensor_forward.hpp  ts.hpp
src/tensor/nn/: cross_entropy_loss.cpp  cross_entropy_loss.hpp  dataset_iterator.cpp  dataset_iterator.hpp  feed_forward.cpp  feed_forward.hpp  feedforward.cpp  feedforward.hpp  loss.cpp  loss.hpp  planar_dataset.cpp  planar_dataset.hpp
swig/: tensor.i
tests/: main_catch2.cpp  matrix.cpp  tensor1d.cpp  test_dimensions.cpp  test_flatarray.cpp  test_matrix.cpp  test_plain_arrays.cpp
tests/flatarray/: test_dimensions.cpp  test_dot.cpp  test_flatarray.cpp
tests/nn/: test_feedforward.cpp  test_planar_dataset.cpp
tests/resources/: test_planar_data.tsv
tests/tensor/: test_dimensions.cpp  test_dot.cpp  test_flatarray.cpp  test_ops.cpp  test_ops_common.cpp  test_tensor.cpp
tests/tensor/nn/: test_feed_forward.cpp  test_planar_dataset.cpp  test_softmax.cpp
