[metadata]
name= tensor
version = attr: tensor.version.__version__
description = "A C++/Python library for neural networks, multidimensional arrays, and much more!"
url = "https://github.com/d-kicinski/tensor"
author = "Dawid Kiciński"
author_email = "kicinski.dawid@gmail.com"
license = "MIT"

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
python_requires "==3.8"
install_requires =
    numpy
    graphviz
tests_require =
    pytest
    pytest-cov

[options.package_data]
tensor = *.so, *.pyi, py.typed

[options.packages.find]
where = src

[mypy]
python_version = 3.8
plugins = numpy.typing.mypy_plugin
